# toypkg

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
scripts/: import-script  stand-alone-script
src/toypkg/: __init__.py
test/: test_import.py
